--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -39,6 +39,14 @@
   border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-teacher-form main fieldset .input-block + .textarea-block {
+  margin-top: 2.4rem;
+}
+
+#page-teacher-form main label {
+  color: var(--color-text-complement)
+}
+
 #page-teacher-form main footer {
   padding: 4rem 2.4rem;
   background: var(--color-box-footer);
