--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -56,7 +56,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background-color: var(--color-secondary);
@@ -68,10 +68,11 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  text-decoration: none;
   transition: 0.2s;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background-color: var(--color-secondary-dark);
 }
 
